feat: refactor TTS Engine, add reading Tts API